--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -5,6 +5,7 @@
     <title>List of Pet Owners</title>
 </head>
 <body>
+<!--/*thymesVar id = "owner" type="com.avensic.sfgpetclinic.model.Owner"*/-->
 <h1 th:text="'List of Owners'">List of Owners...</h1>
 
 <table>
